<resources>
    <string name="app_name">NewsApps</string>
    <string name="news_title">News</string>
    <string name="details_tittle">Details</string>
    <string name="author_details">\Автор \</string>
    <string name="author_unknown">Автор неизвестен</string>
    <string name="url_news">\Ссылка на новость: \</string>
    <string name="date_detail">\Дата: \</string>
    <string name="author_res">Автор</string>
    <string name="tittle_res">Заголовок</string>
    <string name="desc_res">Описание</string>
    <string name="url_res">Ссылка на новость</string>
    <string name="date_res">Дата</string>
    <string name="search">Поиск</string>
    <string name="news_head">Топ Новости</string>
    <string name="news_ever">Разные Новости</string>
    <string name="news_success">Данные успешно добавлены</string>
    <string name="news_finish">Данных больше нет</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>